/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package testenginepb;

import "mirbftpb/mirbft.proto";

// To re-generate, run:
//   protoc --go_out=. testengine.proto
// or simply run go generate

message ScenarioConfig {
	string name = 1;
	string description = 2;
}

message Event {
	uint64 target = 1;
	uint64 time = 2;
        mirbftpb.StateEvent state_event =3;
	bool dropped = 4;
	uint64 delayed = 5;
	uint64 duplicated = 6;
}

message LogEntry {
	oneof Type {
		ScenarioConfig scenario = 1;
		Event event = 2;
	}
}
